# VeriVid

./: .gitignore  LICENSE  main.py  pyproject.toml
app/Validators/: video_validator.py
app/agents/: __init__.py  base_agent.py  consensus_agent.py  context_agent.py  knowledge_agent.py  risk_agent.py  verification_agent.py
app/ai/: registry.py
app/ai/analyzers/: __init__.py  base_analyzer.py  consensus_analyzer.py  context_analyzer.py  risk_analyzer.py  verification_analyzer.py
app/ai/clients/: amd_client.py  fireworks_client.py  gemma_client.py  gemma_knowledge_client.py  knowledge_client.py  llm_client.py  qwen_vision_client.py  transcription_client.py  vision_client.py  whisper_transcription_client.py
app/ai/implementations/: gemma_context_analyzer.py
app/ai/prompts/: prompt_name.py
app/ai/providers/: openai_compatible_client.py  openai_compatible_clients.py
app/ai/schemas/: context_request.py  context_response.py  frame_vision_result.py  inference_request.py  (+6 more)
app/api/: health.py  upload.py
app/core/: ai_settings.py  config.py  constants.py
app/exceptions/: audio.py  base.py  frame.py  inference_exceptions.py  media.py  metadata.py  storage.py
app/pipelines/: debate_pipeline.py  video_pipeline.py
app/prompts/: loader.py  prompt_name.py
app/schemas/: health.py  scene.py  scene_collection.py  transcript.py  transcript_segment.py  upload.py  video_artifacts.py  video_metadata.py  video_workspace.py
app/services/: audio_service.py  consensus_service.py  context_service.py  debate_persistence_service.py  frame_service.py  knowledge_persistence_service.py  knowledge_service.py  metadata_service.py  risk_service.py  scene_persistence_service.py  storage_service.py  upload_service.py  verification_service.py  vision_service.py  whisper_service.py  workspace_service.py
app/utils/: image_encoder.py  media_executor.py
(+34 files in other folders)
